2005-01-24  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Extract core of cmd_fetch_all() and
	cmd_fetch_all_missing() into a new do_fetch_all(), which uses
	call_queue_*(). Fix spacing on parse_fetch_options() help. Reorder
	some subs. Move BuildConflicts removal to after src/deb download.

2005-01-23  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* VirtPackage.pm: Don't print messages when not in debug mode (they
	will be seen every time apt/dpkg is run!). Eliminate repetition of
	path to cc1plus.

2005-01-23  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm, Services.pm: Replace do_calls() with
	call_queue_clear() and call_queue_add().

2005-01-22  Dave Morrison  <dmrrsn@users.sourceforge.net>

	* Bootstrap.pm:  Disallow bootstrapping with perl 5.8.4

2005-01-22  Peter O'Gorman  <ogorman@users.sourceforge.net>

	* Bootstrap.pm:  Allow bootstrapping with perl 5.8.6 (maybe).

2005-01-20  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: Un-quotemeta std URL chars that aren't shell metas.

2005-01-20  Daniel Macks  <dmacks@netspace.org>

	* NetAccess.pm: quotemeta() Source values when used in shell cmd.

2005-01-19  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: New do_calls() function processes a list of method
	and function calls.
	* Engine.pm: cmd_fetch, cmd_fetch_missing, and real_install now
	use do_calls() to handle phase_fetch*() calls.

2005-01-18  Daniel Macks  <dmacks@netspace.org>

	* Services.pm: add new param to expand_percent() to reduce
	unknown-% from die to warn+ignore or silent+ignore.
	* PkgVersion.pm: param_expanded() silently ignores unknown %-exp.
	* Engine.pm, PkgVersion.pm: allow unknown % in DescDetail and
	DescUsage.

2005-01-17  Daniel Macks  <dmacks@netspace.org>

	* VirtPackage.pm: Add "system-xfree86-manual-install" as a
	(non-installed) catch-all for all of Apple X11*.pkg

2005-01-17  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: (Re)introduce prompt_selection() with timeout; remove